# gnu_searduino

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.git  Makefile.in  Makefile.tmpl  Makefile_in.keep  NEWS  README  TODO  configure  configure.ac  searduino-builder.1
example/lcd-shield/: Makefile.am  Makefile.tmpl  lcd-shield.cpp  main.c
example/python-digcounter/: Makefile  Makefile.am  Makefile.digcounter  Makefile.tmpl  ard_code.c  simple-hw.py  simple-hw.sh.tmpl
example/toggle-pins/: Makefile.am  Makefile.tmpl  main.c
extensions/arduino-lib/: Makefile.am  Makefile.keep  arduino_code.c
extensions/java/: Makefile  Makefile.am
extensions/java/c/: searduino-jni.c  searduino-jni.cpp  searduino-jni.h
extensions/java/com/sandklef/searduino/: Searduino.java  SearduinoObserver.java
extensions/java/test/: Makefile.am  runclass
extensions/java/test/fast-digital-out/: Makefile  main.c
extensions/python/: Makefile  Makefile.am  Makefile.keep  pearduino.c
faked-arduino/: Makefile  Makefile.am  Makefile.keep
faked-arduino/LiquidCrystal/: Makefile.in
faked-arduino/LiquidCrystal/src/: liquidcrystal.cpp
faked-arduino/LiquidCrystal/test/: Makefile  Makefile-arduino-lcd  Makefile.am  Makefile.in  arduino-lcd.cpp  test_begin.c  test_begin.cpp  test_clear.cpp  test_lcdcallback.cpp  test_liquidcrystal.cpp
faked-arduino/Servo/src/: servo.cpp
faked-arduino/SoftwareSerial/src/: softwareserial.cpp
faked-arduino/arduino/include/: pins_arduino.h  wiring_private.h
faked-arduino/arduino/include/avr/: pgmspace.h
faked-arduino/arduino/include/boards/: pins_due.h
faked-arduino/arduino/src/: CDC.cpp  HID.cpp  HardwareSerial.cpp  Print.cpp  Tone.cpp  USBCore.cpp  WMath.cpp  WString.cpp  boards.c  ext_io.c  i2c_loader.c  searduino_internal_log.c  searduino_log.c  searduino_log_impl.c  searduino_pin.c  setup.c  time_stuff.c  utils.c  wiring_analog.c  wiring_digital.c  wiring_pulse.c
faked-arduino/arduino/src/hid-backends/: generic.c  x11.c
faked-arduino/arduino/test/: Makefile  Makefile.am  i2c_setup.c  test_boards.c  test_comm.c  test_digio.c  test_i2cload.c  test_leonardo.c  test_limit.c  test_log.c  test_setup.c  test_time.c  test_uno.c  test_wiring_digital.c
faked-arduino/communication/include/: comm.h  ext_io.h  read_command.h
faked-arduino/communication/src/: comm.c  digio.c  ext_io.c  read_command.c
faked-arduino/communication/test/: Makefile.am  test_comm.c  test_digio.c
faked-arduino/include/: Makefile.am
faked-arduino/include/arduino/: Makefile.am  boards.h  error.h  ext_io.h  hid-generic.h  hid-x11.h  i2c_loader.h  pins_arduino.h  searduino.h  searduino_internal_log.h  searduino_log.h  searduino_log_impl.h  searduino_pin.h  setup.h  time_stuff.h  twi_mock.h  wiring_private.h
faked-arduino/include/arduino/avr/: pgmspace.h
faked-arduino/include/arduino/boards/: Makefile.am
faked-arduino/include/avr/: Makefile.am  delay.h  io.h  pgmspace.h
faked-arduino/include/avr/util/: Makefile.am
faked-arduino/include/communication/: Makefile.am  comm.h  digio.h  error.h  ext_io.h  read_command.h
faked-arduino/include/seasim/: Doxyfile  Makefile.am  seasim.h
faked-arduino/include/utils/: Makefile.am  error.h  print.h
faked-arduino/seasim/src/: seasim.c
faked-arduino/seasim/test/: Makefile
faked-arduino/seasim/test/arduino-code/: Makefile  arduino-code.c
faked-arduino/seasim/test/sim-code/: Makefile  test-sim.c
faked-arduino/utils/include/: print.h  types.h
faked-arduino/utils/src/: print-funs.c  print-funs.cpp  print.c
faked-arduino/wire/src/: twi_mock.c  twi_mock.h  wire.cpp
faked-arduino/wire/test/: Makefile.am  test_begin.cpp
mk/board-makefiles/: Makefile.am  atmega1280.mk  atmega168.mk  atmega2560.mk  atmega328.mk  atmega32u4.mk  atmega8.mk  bt.mk  bt328.mk  diecimila.mk  ethernet.mk  fio.mk  lilypad.mk  lilypad328.mk  mega2560.mk  mini.mk  mini328.mk  nano.mk  nano328.mk  pro.mk  pro328.mk  pro5v.mk  pro5v328.mk  stub.mk  uno.mk
mk/external-libraries/: Makefile.am  Makefile.due  Makefile.leonardo  Makefile.mega  Makefile.mega2560  Makefile.stub  Makefile.uno
simulators/jearduino/: Makefile  Makefile.am  searduino-jearduino.1  searduino-jearduino.sh.tmpl
simulators/jearduino/com/sandklef/jearduino/: ArduinoCodeNameEvent.java  Board.java  BoardEvent.java  CodeEvent.java  DirEvent.java  ExecControl.java  ExecEvent.java  FileEvent.java  FileLogger.java  InfoPanel.java  InoDirEvent.java  Jearduino.java  JearduinoAbout.java  JearduinoEvent.java  JearduinoMenu.java  JearduinoPreferences.java  JearduinoState.java  LCD.java  Logger.java  Menu.java  Pin.java  PinEvent.java  PinTable.java  Preferences.java  ProjectPanel.java  SearduinoObserver.java  Tailer.java  TailerEvent.java
simulators/jearduino/com/sandklef/searduino/: ExecControl.java  ExecEvent.java  Jearduino.java  Jearuino.java  Logger.java  Pin.java  PinEvent.java  PinTable.java  SearduinoMain.java  main.java  (+1 more)
simulators/jearduino/test/fast-digital-out/: serial.cpp
simulators/stream/: Makefile.am  Makefile.keep  searduino-stream.sh.tmpl  simulator.c
test/: Makefile.am
test/arduino-code-dynamic/: Makefile  Makefile.tmpl  ard_code.c
test/arduino-code-static/: Makefile  Makefile.tmpl  ard_code.c
test/arduino-lib/: Makefile  Makefile.tmpl  functions.c  functions.h
test/examples/arduino-code-dynamic/: Makefile  ard_code.c
test/examples/arduino-code-static/: Makefile  ard_code.c  test
test/examples/test-c/: launch-sim.sh
test/hw/: Makefile  Makefile.tmpl  test.c
test/ino/: test.sh
test/mk/: Makefile-generic.mk  Makefile-lib.mk  Makefile-prog.mk  Makefile-shlib.mk  Makefile.am  Makefile.generic  Makefile.leonardo  Makefile.mega  Makefile.mega2560  Makefile.stub  Makefile.uno
test/searduino_loop/: Makefile  Makefile.tmpl  test.c
test/seardunio_loop/: Makefile  Makefile.generic  Makefile.leonardo  Makefile.mega  Makefile.mega2560  Makefile.stub  Makefile.uno
test/shared/: Makefile  Makefile.tmpl  test.c
test/shared-main/: Makefile  Makefile.tmpl  test  test.c
test/static/: Makefile  Makefile.tmpl
test/stub/: Makefile  Makefile.tmpl  test  test.c
(+229 files in other folders)
