if SHAREDTEST
SUBDIRS= arduino-lib hw stub searduino_loop arduino-code-dynamic arduino-code-static shared shared-main 
else
SUBDIRS= arduino-lib hw stub searduino_loop arduino-code-dynamic arduino-code-static
endif

EXTRA_DIST =           \
     ./stub/Makefile    \
     ./stub/test.c       \
     ./shared/Makefile    \
     ./shared/test.c       \
     ./shared-main/Makefile \
     ./shared-main/test.c    \
     ./hw/Makefile            \
     ./hw/test.c               \
     ./arduino-lib/Makefile     \
     ./arduino-lib/functions.c   \
     ./arduino-lib/functions.h    \
     ./searduino_loop/Makefile     \
     ./searduino_loop/test.c

