if SHAREDTEST
SUBDIRS= arduino-lib mk hw stub searduino_loop arduino-code-dynamic arduino-code-static shared shared-main 
else
SUBDIRS= arduino-lib mk hw stub searduino_loop arduino-code-dynamic arduino-code-static
endif

EXTRA_DIST =           \
    ./stub/Makefile \
    ./stub/test.c \
    ./shared/Makefile \
    ./shared/test.c \
    ./static/Makefile \
    ./static/test.c \
    ./arduino-code-dynamic/Makefile \
    ./arduino-code-dynamic/ard_code.c \
    ./shared-main/Makefile \
    ./shared-main/test.c \
    ./searduino_loop/Makefile \
    ./searduino_loop/test.c \
    ./arduino-code-static/Makefile \
    ./arduino-code-static/ard_code.c \
    ./hw/Makefile \
    ./hw/test.c \
    ./arduino-lib/Makefile.tmpl \
    ./arduino-lib/functions.c \
    ./arduino-lib/functions.h \
    ./arduino-lib/include/functions.h 

