pkgdataexampledir = $(pkgdatadir)/mk/board-makefiles
dist_pkgdataexample_DATA = \
  atmega2560.mk \
  atmega1280.mk \
  atmega168.mk \
  atmega328.mk \
  atmega32u4.mk \
  atmega8.mk \
  bt328.mk \
  bt.mk \
  diecimila.mk \
  ethernet.mk \
  fio.mk \
  lilypad328.mk \
  lilypad.mk \
  Makefile.am \
  mega2560.mk \
  mega.mk \
  mini328.mk \
  mini.mk \
  nano328.mk \
  nano.mk \
  pro328.mk \
  pro5v328.mk \
  pro5v.mk \
  pro.mk \
  stub.mk \
  uno.mk 
